[package]
name = "boundless-market"
description = "SDK for the Boundless Market, part of the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
derive_builder = "0.20.2"
alloy = { version = ">=1.0.33", default-features = false, features = ["reqwest", "network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
async-stream = { workspace = true }
async-trait = "0.1"
aws-sdk-s3 = { version = "1.107.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
bytemuck = { workspace = true }
clap = { workspace = true }
dashmap = "6"
futures = "0.3"
futures-util = { workspace = true }
hex = { workspace = true }
httpmock = "0.7"
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["http2", "system-proxy", "charset", "json", "multipart", "rustls-tls-webpki-roots-no-provider"] }
risc0-aggregation = { workspace = true }
risc0-circuit-recursion = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
siwe = { version = "0.6", features = ["serde"] }
chrono = { workspace = true }
time = "0.3"
utoipa = { workspace = true }

[dev-dependencies]
boundless-test-utils = { workspace = true }
tracing-test = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[features]
default = []
test-utils = ["dep:risc0-circuit-recursion"]
